--- a/basic1.html
+++ b/basic1.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is our first page.</h1>
+    <h2>Today is a nice day.</h2>
+    <h3>I love programming!</h3>
+    <h4>Let's make some challenges!</h4>
+    <h5>Go ahead!</h5>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi delectus sed libero fugiat magnam fugit, magni corporis, reprehenderit rerum sint optio quae nobis voluptas. Sit iusto distinctio officiis alias consequuntur.</p>
 </body>
 </html>
