--- a/excercise3.html
+++ b/excercise3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meat charset="UTF-8">
-<titel>HTML text formatting elements </titel>
+<title>HTML text formatting elements </title>
 <head>
 <body>
 <h1> HTML text formatting elements</h1>
